--- a/stocks-market/build.gradle
+++ b/stocks-market/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id "org.liquibase.gradle" version "2.0.1" apply false
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.exyfi'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -34,9 +34,15 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-all
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+
+    testCompile "org.springframework.boot:spring-boot-starter-test:2.2.5.RELEASE"
+    testCompile group: 'uk.co.jemos.podam', name: 'podam', version: '7.2.2.RELEASE'
 }
 
 test {
